# gamenn

./: .gitignore  README.md  main  main.py  pyproject.toml
azla/: __init__.py  auth.py  checkpoint.py  cli.py  config.py  curriculum.py  datasets.py  eval.py  infer_cli.py  latent_scores.py  logging_utils.py  mcts.py  modeling.py  selfplay.py  train_ppo.py  utils.py
configs/: default.yaml  tiny.yaml
datasets/: sample.jsonl
scripts/: compare_infer.py  infer.py
tests/: test_les.py  test_mcts.py
